rails/error_Logs.txt
================================Detailed Explanation of Erros and Its solution================================
1.when i created a rails project(in my case) :
	
	commmand applied : rails new simple_cms -d postgresql
	

Error : An error occurred while installing pg (1.2.3), and Bundler cannot continue.
Make sure that `gem install pg -v '1.2.3' --source 'https://rubygems.org/'` succeeds before bundling.

In Gemfile:
  pg
         run  bundle binstubs bundler
Could not find gem 'pg (~> 1.1)' in rubygems repository https://rubygems.org/ or installed locally.
The source does not contain any versions of 'pg'
       rails  webpacker:install
Could not find gem 'pg (~> 1.1)' in rubygems repository https://rubygems.org/ or installed locally.
The source does not contain any versions of 'pg'
Run `bundle install` to install missing gems.

	solution : 1. run :	sudo apt-get install libpq-dev
	           2. run :	bundle install // bcs project already created no need to create again simple install webpacker as shown below
		   3. run :	rails webpacker:install
		   4. run : 	rails server // it will start running
2.not able to connect with the database :
	command  : rails db:create
	
	Error explanation : 

FATAL:  Peer authentication failed for user "aman"
Couldn't create 'simple_cms_development' database. Please check your configuration.
rails aborted!
ActiveRecord::ConnectionNotEstablished: FATAL:  Peer authentication failed for user "aman"
/home/beryl/Desktop/Training/rails/simple_cms/bin/rails:5:in `<top (required)>'
/home/beryl/Desktop/Training/rails/simple_cms/bin/spring:10:in `block in <top (required)>'
/home/beryl/Desktop/Training/rails/simple_cms/bin/spring:7:in `<top (required)>'

Caused by:
PG::ConnectionBad: FATAL:  Peer authentication failed for user "aman"
/home/beryl/Desktop/Training/rails/simple_cms/bin/rails:5:in `<top (required)>'
/home/beryl/Desktop/Training/rails/simple_cms/bin/spring:10:in `block in <top (required)>'
/home/beryl/Desktop/Training/rails/simple_cms/bin/spring:7:in `<top (required)>'
Tasks: TOP => db:create
(See full trace by running task with --trace)

	solution : uncommented the port: 5432  host and make sure you entered the right password of database user in file database.yml 



3.data type error : error was generated when run command of genration migration.
	command applied : rails db:migrate
	Error explanation:
	
== 20211109112006 DoNothingYet: migrating =====================================
== 20211109112006 DoNothingYet: migrated (0.0000s) ============================

rails aborted!
SyntaxError: /home/beryl/Desktop/Training/rails/simple_cms/db/migrate/20211109113538_create_users.rb:4: syntax error, unexpected symbol literal, expecting `do' or '{' or '('
      t.String,last_name :first_name
                         ^
/home/beryl/Desktop/Training/rails/simple_cms/bin/rails:5:in `<top (required)>'
/home/beryl/Desktop/Training/rails/simple_cms/bin/spring:10:in `block in <top (required)>'
/home/beryl/Desktop/Training/rails/simple_cms/bin/spring:7:in `<top (required)>'
Tasks: TOP => db:migrate
(See full trace by running task with --trace)
	

solution : 
class CreateUsers < ActiveRecord::Migration[6.1]
  def change
    create_table :users do |t|
      t.String :last_name   // change t.String to t.string 
      t.String :first_name  // change t.String to t.string 
      t.String :email       // change t.String to t.string 

      t.timestamps # generated automatically which tells created_at and updated_at
    end
  end
end


